--- a/app/webroot/css/style.css
+++ b/app/webroot/css/style.css
@@ -1,3 +1,9 @@
+html, body {
+	height:100%;
+}
+body {
+	font-family: Arial, Helvetica, sans-serif;
+}
 a {
 	text-decoration: none;
 	color: inherit;
@@ -5,24 +11,21 @@ a {
 h1 {
 	font-size: 22px;
     font-weight: bold;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
+    text-align: center;
 }
-p {
-	margin-bottom: 10px;
-}
-strong {
-	font-weight: bold;
-}
-
-.kinderFont {
-    font-family: 'Neucha', cursive;
+.kinderFont {    
     font-weight:bold;
+	font-family: 'Neucha';
 }
 .fleft {
 	float: left;
 }
 .fright {
 	float: right;
+}
+.minWidth {
+	min-width: 1200px;
 }
 /**********************************/
 
@@ -33,7 +36,7 @@ strong {
 	height: 158px;
 	width: 100%;
 	position: relative;
-	z-index: 3
+	z-index: 3;
 }
 
 .logo {
@@ -45,11 +48,12 @@ strong {
 
 .mainMenu {
 	margin-top: 130px;
-	color: #383837;
+	color:#575757;
 }
 .mainMenu li {
 	display: inline-block;
 	margin: 0 5px;
+	font-size: 20px;	
 }
 .mainMenu li a:hover {
 	color: #686868;
@@ -59,8 +63,9 @@ strong {
 .info {
 	text-align: right;
 	color: #929292;
-	margin: 10px 35px 0 0;
-	max-width: 450px;
+	position: absolute;
+	right: 35px;
+	top: 10px;
 }
 .info p:first-child {
 	margin-bottom: 15px;
@@ -68,25 +73,50 @@ strong {
 /************************************/
 
 /*		Main  		*/
+/*---*/
+.content a {
+	color: #508800;
+	line-height: 18px;
+}
+.content a:hover {
+	padding-bottom: 3px;
+	border-bottom: 1px dashed #508800;
+}
+.content p {
+	margin-bottom: 15px;
+	line-height: 20px;
+}
+.content strong {
+	font-weight: bold;
+}
+.content ul {
+	margin: 20px 0;
+	list-style-type: disc;
+}
+.content ul li {
+	margin: 10px 25px;
+}
+/*------------*/
 .main {
-	height: 1000px;
+	height: calc(100% - 159px);
+	display: table;
+	position: relative;
+	top: -10px;
+	width: 100%;
 }
 
 .sidebar {
-	width: 170px;
-	height: 100%;
-	position: relative;
-	top: -10px;
-	padding-top: 10px;
-	margin-bottom: -10px;
+	display: table-cell;
+	width: 166px;
 	z-index: 1;
 	background: #fff116; /* Old browsers */
-	background: -moz-linear-gradient(left, #fff116 97%, rgba(0,0,0,0) 99%), url("../img/left-bg.png") top right repeat-y; /* FF3.6+ */
-	background: -webkit-gradient(linear, left top, right top, color-stop(97%,#fff116), color-stop(99%,rgba(0,0,0,0))), url("../img/left-bg.png") top right repeat-y; /* Chrome,Safari4+ */
-	background: -webkit-linear-gradient(left, #fff116 97%,rgba(0,0,0,0) 99%), url("../img/left-bg.png") top right repeat-y; /* Chrome10+,Safari5.1+ */
-	background: -o-linear-gradient(left, #fff116 97%,rgba(0,0,0,0) 99%), url("../img/left-bg.png") top right repeat-y; /* Opera 11.10+ */
-	background: -ms-linear-gradient(left, #fff116 97%,rgba(0,0,0,0) 99%), url("../img/left-bg.png") top right repeat-y; /* IE10+ */
-	background: linear-gradient(to right, #fff116 97%,rgba(0,0,0,0) 99%), url("../img/left-bg.png") top right repeat-y; /* W3C */
+	border-right: 2px solid #535353;
+	/*background: -moz-linear-gradient(left, #fff116 97%, rgba(0,0,0,0) 97%), url("../img/left-bg.png") top right repeat-y; /* FF3.6+ */
+	/*background: -webkit-gradient(linear, left top, right top, color-stop(97%,#fff116), color-stop(97%,rgba(0,0,0,0))), url("../img/left-bg.png") top right repeat-y; /* Chrome,Safari4+ */
+	/*background: -webkit-linear-gradient(left, #fff116 97%,rgba(0,0,0,0) 97%), url("../img/left-bg.png") top right repeat-y; /* Chrome10+,Safari5.1+ */
+	/*background: -o-linear-gradient(left, #fff116 97%,rgba(0,0,0,0) 97%), url("../img/left-bg.png") top right repeat-y; /* Opera 11.10+ */
+	/*background: -ms-linear-gradient(left, #fff116 97%,rgba(0,0,0,0) 97%), url("../img/left-bg.png") top right repeat-y; /* IE10+ */
+	/*background: linear-gradient(to right, #fff116 97%,rgba(0,0,0,0) 97%), url("../img/left-bg.png") top right repeat-y; /* W3C */
 }
 
 .leftMenu {
@@ -112,18 +142,18 @@ strong {
 }
 
 .content {
-	display: table;
-	padding: 15px 35px 0;
-	font-size: 12px;
-	line-height: 16px;
-	color: #383837;
+	display: table-cell;
+	padding: 15px 35px 230px;
+	font-size: 15px;
+	line-height: 15px;
+	color: #383838;
 }
+
 .content h1 {
 	color: #383837;
 }
 .coursList {
 	list-style: disc inside;
-	height: 194px;
 	margin: 15px 0 20px;
 }
 .coursList:before {
@@ -134,30 +164,68 @@ strong {
 	width: 66px;
 	float: left;
 }
-.coursList li {
+.content .coursList li {
 	line-height: 20px;
+	margin: 0;
 }
 .missionList {
 	margin: 15px 0;
 	list-style: disc inside;
 	padding-left: 65px;
 }
+.contacts {
+	margin-bottom: 30px;
+}
+.contacts li {
+	margin-bottom: 10px;
+}
+.schedule {
+	margin: 0 auto 50px;
+	border-radius: 10px;
+	width: 750px;
+	padding: 15px 10px;
+}
+.schedule > p {
+	padding-bottom: 5px;
+	margin-bottom: 15px;
+	padding: 5px;
+}
+.schedule .time {
+	font-family: 'Bonbon', cursive;
+	font-size: 24px;
+	color: #02AAE9;
+	font-weight: bold;
+	width: 100px;
+	text-align: center;
+	display: inline-block;
+}
+.schedule .description {
+	border-radius: 4px;
+	background: #ded;
+	padding: 5px 15px;
+	margin-left: 15px;
+	width: 500px;
+	display: inline-block;
+	text-align: center;
+}
+
 /*****************************************/
 
 /*		Footer 		*/
 .footer {
 	height: 150px;
+	z-index: 2;
 	width: 100%;
-	background: red;
 	margin-top: -150px;
 	position: relative;
+	border-top: 1px solid #535353;
 	background: #b6d14c; /* Old browsers */
-	background: -moz-linear-gradient(top, rgba(0,0,0,0) 1%, #b6d14c 3%), url("../img/bottom-bg.png") top left repeat-x; /* FF3.6+ */
-	background: -webkit-gradient(linear, left top, left bottom, color-stop(1%,rgba(0,0,0,0)), color-stop(3%,#b6d14c)), url("../img/bottom-bg.png") top left repeat-x; /* Chrome,Safari4+ */
-	background: -webkit-linear-gradient(top, rgba(0,0,0,0) 1%,#b6d14c 3%), url("../img/bottom-bg.png") top left repeat-x; /* Chrome10+,Safari5.1+ */
-	background: -o-linear-gradient(top, rgba(0,0,0,0) 1%,#b6d14c 3%), url("../img/bottom-bg.png") top left repeat-x; /* Opera 11.10+ */
-	background: -ms-linear-gradient(top, rgba(0,0,0,0) 1%,#b6d14c 3%), url("../img/bottom-bg.png") top left repeat-x; /* IE10+ */
-	background: linear-gradient(to bottom, rgba(0,0,0,0) 1%,#b6d14c 3%), url("../img/bottom-bg.png") top left repeat-x; /* W3C */
+	/*background: -moz-linear-gradient(top, rgba(0,0,0,0) 1%, #b6d14c 3%), url("../img/bottom-bg.png") top left repeat-x; /* FF3.6+ */
+	/*background: -webkit-gradient(linear, left top, left bottom, color-stop(1%,rgba(0,0,0,0)), color-stop(3%,#b6d14c)), url("../img/bottom-bg.png") top left repeat-x; /* Chrome,Safari4+ */
+	/*background: -webkit-linear-gradient(top, rgba(0,0,0,0) 1%,#b6d14c 3%), url("../img/bottom-bg.png") top left repeat-x; /* Chrome10+,Safari5.1+ */
+	/*background: -o-linear-gradient(top, rgba(0,0,0,0) 1%,#b6d14c 3%), url("../img/bottom-bg.png") top left repeat-x; /* Opera 11.10+ */
+	/*background: -ms-linear-gradient(top, rgba(0,0,0,0) 1%,#b6d14c 3%), url("../img/bottom-bg.png") top left repeat-x; /* IE10+ */
+	/*background: linear-gradient(to bottom, rgba(0,0,0,0) 1%,#b6d14c 3%), url("../img/bottom-bg.png") top left repeat-x; /* W3C */
 }
 
 .tree {
@@ -169,4 +237,3 @@ strong {
 	bottom: 0;
 	z-index: 4;
 }
-/**************************************/
