Changing contact phones

--- a/css/main.css
+++ b/css/main.css
@@ -67,7 +67,7 @@
 }
 
 .top-menu {
-    width: 40%;
+    width: 50%;
   height: 100%;
 }
 
@@ -101,8 +101,8 @@
 .info-header {
   text-align: right;
   padding: 10px 25px 0 0;
-  font-size: 16px;
-  width: 35%;
+  font-size: 15px;
+  width: 45%;
   color: #999;
   font-family: 'Neucha', cursive;
   font-weight: bold;
@@ -112,6 +112,10 @@
   margin-top: 5px;
   font-family: 'Neucha', cursive;
   font-weight: bold;
+}
+
+.contacts .phones {
+  color: #789;
 }
 
 #focus, .om {
