--- a/app/webroot/css/main.css
+++ b/app/webroot/css/main.css
@@ -639,6 +639,11 @@
     transition: .3s all;
 }
 
+.motto {
+    font-size: 25px;
+    color: #666;
+}
+
 .music::before {
     content: '';
     background-color: rgba(225,108,108,0.5);
