--- a/app/webroot/css/main.css
+++ b/app/webroot/css/main.css
@@ -966,4 +966,20 @@
         width: 70%;
     }
 }
-/*additions to responsive end*/
+
+.card-image {
+  padding: 5px;
+  max-height: 100px;
+  max-width: 150px;
+}
+
+.main-container {
+  padding: 10px 15px;
+  max-height: 220px;
+  max-width: 730px;
+}
+
+.carousel.slide {
+  max-height: 300px;
+  max-width: 500px;
+}
