--- a/app/webroot/css/main.css
+++ b/app/webroot/css/main.css
@@ -300,13 +300,10 @@
     height: 100%;
     justify-content: space-between;
 }
-
-
 /*wrap end*/
 
 
 /*content*/
-
 .content {
     width: 87.2%;
     padding: 15px 35px 100px 35px;
@@ -328,6 +325,10 @@
     width: 86%;
     margin: 0 auto;
     margin-bottom: 15px;
+}
+
+.center {
+    text-align: center;
 }
 
 .bgim::before {
